# raise

./: README.md  index.html  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
crates/raise-cli/: Cargo.toml  raise-cli.cdx.json
crates/raise-cli/src/: main.rs
crates/raise-cli/src/commands/: ai.rs  code_gen.rs  devops.rs  genetics.rs  mod.rs  model_engine.rs  traceability.rs  training.rs  utils.rs  workflow.rs
crates/raise-core/: .staging_1781679658667_mod_kernel_math_rs_staged.rs  .staging_1781764055772_mod_kernel_math_rs_staged.rs  .staging_1781849912125_mod_kernel_math_rs_staged.rs  .staging_1781858092840_mod_kernel_math_rs_staged.rs  Cargo.toml  raise-core.cdx.json
crates/raise-core/src/: lib.rs
crates/raise-core/src/agents/: deployer.rs  mod.rs
crates/raise-core/src/ai/: orchestrator.rs
crates/raise-core/src/ai/agents/: devops_agent.rs  dynamic_agent.rs  intent_classifier.rs  mod.rs  software_agent.rs
crates/raise-core/src/ai/context/: rag.rs  retriever.rs  tests.rs
crates/raise-core/src/ai/deep_learning/layers/: gnn_layer.rs
crates/raise-core/src/ai/deep_learning/models/: gnn_model.rs
crates/raise-core/src/ai/graph_store/: adjacency.rs  builder.rs  engine.rs  features.rs  logic.rs  mod.rs
crates/raise-core/src/ai/llm/: client.rs  native_engine.rs
crates/raise-core/src/ai/nlp/embeddings/: fast.rs
crates/raise-core/src/ai/protocols/: ontology.rs
crates/raise-core/src/ai/tools/: codegen_tool.rs
crates/raise-core/src/ai/training/: dataset.rs  lora.rs  mod.rs
crates/raise-core/src/ai/world_model/: engine.rs  mod.rs  training.rs
crates/raise-core/src/ai/world_model/perception/: encoder.rs  mod.rs
crates/raise-core/src/ai/world_model/validation/: mod.rs  tribunal.rs
crates/raise-core/src/blockchain/bridge/: mod.rs  model_sync.rs
crates/raise-core/src/code_generator/: mod.rs  module_weaver.rs
crates/raise-core/src/code_generator/generators/: constraint_validator.rs  mod.rs
crates/raise-core/src/code_generator/reconcilers/: rust.rs
crates/raise-core/src/genetics/: bridge.rs  engine.rs  handler.rs  traits.rs
crates/raise-core/src/genetics/evaluators/: architecture.rs  codegen.rs  deployment.rs  mod.rs  neuro_symbolic.rs
crates/raise-core/src/genetics/genomes/: ast_arch.rs  mod.rs
crates/raise-core/src/json_db/collections/: manager.rs
crates/raise-core/src/json_db/jsonld/: README.md  vocabulary.rs
crates/raise-core/src/json_db/schema/: bootstrapper.rs  ddl.rs  registry.rs  validator.rs
crates/raise-core/src/kernel/: assets.rs  environment.rs  mod.rs  state.rs
crates/raise-core/src/model_engine/: ingestion.rs  loader.rs  mod.rs  types.rs
crates/raise-core/src/model_engine/arcadia/: README.md  element_kind.rs  mod.rs
crates/raise-core/src/model_engine/capella/: diagram_generator.rs  mod.rs  model_reader.rs  model_writer.rs  xmi_parser.rs
crates/raise-core/src/model_engine/dsl/: grammar.gbnf  grammar.pest  mapper.rs  mod.rs  parser.rs
crates/raise-core/src/model_engine/eurlex/: mod.rs  parser.rs
crates/raise-core/src/model_engine/sysml2/: grammar.pest  mapper.rs
crates/raise-core/src/model_engine/transformers/: dialogue_to_model.rs  eurlex_to_model.rs  mod.rs
crates/raise-core/src/model_engine/validators/: compliance_validator.rs  consistency_checker.rs  dynamic_validator.rs  mod.rs  ontological_validator.rs
crates/raise-core/src/rules_engine/: evaluator.rs
crates/raise-core/src/services/: ai_service.rs  codegen_service.rs  devops_service.rs  genetics_service.rs  gnn_service.rs  mod.rs  model_service.rs  traceability_service.rs  training_service.rs
crates/raise-core/src/traceability/: impact_analyzer.rs  tracer.rs
crates/raise-core/src/traceability/compliance/: ai_governance.rs  do_178c.rs  eu_ai_act.rs  iec_61508.rs  iso_26262.rs  mod.rs
crates/raise-core/src/traceability/reporting/: README.md  audit_report.rs  trace_matrix.rs
crates/raise-core/src/utils/: mod.rs  prelude.rs
crates/raise-core/src/utils/context/: i18n.rs  session.rs
crates/raise-core/src/utils/core/: env.rs  macros.rs  mod.rs
crates/raise-core/src/utils/data/: config.rs  encoding.rs  json.rs  mod.rs
crates/raise-core/src/utils/inference/: embeddings.rs
crates/raise-core/src/utils/io/: audio.rs  fs.rs  mod.rs  os.rs  os_types.rs
crates/raise-core/src/utils/network/: server.rs
crates/raise-core/src/utils/testing/: mock.rs  physical.rs
crates/raise-core/src/workflow_engine/: compiler.rs  executor.rs  mod.rs  scheduler.rs  state_machine.rs
crates/raise-core/src/workflow_engine/handlers/: decision.rs  task.rs  wasm.rs  world_model.rs
crates/raise-desktop/: raise-desktop.cdx.json
crates/raise-desktop/src/commands/: codegen_commands.rs
crates/raise-edge/: Cargo.toml  raise-edge.cdx.json
crates/raise-edge/src/: main.rs
src/: App.tsx
src/api/: tauri.ts
src/store/: useRaiseStore.ts
src/styles/: globals.css
src/types/: bindings.ts
src/view/: ControlTower.tsx
src/view/layers/canvas/: ArcadiaTopology.tsx  WorldModelCanvas.tsx
src/view/layers/overlay/: BottomPanel_Hitl.tsx  LeftPanel_Mandate.tsx  RightPanel_Squad.tsx
