[package]
name = "raise-core"
version.workspace = true
authors.workspace = true
license = "Apache-2.0"
edition.workspace = true

[dependencies]
# --- Sérialisation & Données (Workspace) ---
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
serde_yaml = "0.9"

# --- Validation & Traitement ---
regex = "1.10"
pest = "2.7"
pest_derive = "2.7"

# --- Asynchrone & Runtime (Workspace) ---
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process"] }
tokio-stream = "0.1"
async-trait = "0.1"
lru = "0.18.0"

# --- Utilitaires Système & Fichiers (Workspace) ---
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = "2"
pathdiff = "0.2"
url = "2.5"
tempfile = "3.10"
zstd = "0.13"

# --- Plugins & Runtime WASM (Workspace) ---
wasmtime = { workspace = true }

# Requis pour l'embarquement des schémas
include_dir = "0.7"
dirs = "6.0.0"

# --- Logs & Traçabilité ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# --- UUID & Temps ---
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
rand = "0.10.0"

# --- Algorithme Génétique ---
rayon = "1.10"       # Pour le parallélisme (par_iter)
rand_distr = "0.6.0" # Pour la distribution Gaussienne (Mutation)
rand_core = "0.10.0" # Pour exposer le trait RngCore  

# ==========================================
# RÉSEAU & SERVEUR LOCAL (Raise Network)
# ==========================================
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    "webpki-roots",
    "json",
    "blocking",
    "multipart",
] }
axum = { version = "0.8.8", features = ["json", "tokio"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# --- MOTEUR IA & NLP ---
text-splitter = "0.30.1"
tiktoken-rs = "0.11.0"

# --- STACK IA NATIVE (CANDLE) ---
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
safetensors = "0.7.0"
nvml-wrapper = "0.12.1"

tokenizers = { version = "0.23.1" }
fastembed = { version = "5.13.4", default-features = false, features = [
    "hf-hub-rustls-tls",
    "ort-download-binaries-rustls-tls"
] }


# --- LA CAPTATION AUDIO ---
cpal = { version = "0.17.2", optional = true }
rubato = { version = "3.0.0", optional = true }
audioadapter = { version = "3.0.0", optional = true }
ringbuf = { version = "0.5.0", optional = true }

# --- BASE DE DONNÉES & QUERY ---
sqlparser = { version = "0.62.0", features = ["serde"] }

# --- CRYPTO ---
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.11.0"
hex = "0.4"
futures = "0.3.31"
async-recursion = "1.1.1"

# --- BLOCKCHAIN (Fabric & VPN) ---
libp2p = { version = "0.56", features = [
    "kad",
    "gossipsub",
    "request-response",
    "cbor",
    "macros",
    "tcp",
    "noise",
    "yamux",
    "dns",
    "tokio",
] }
getrandom = { version = "0.4.1", features = ["wasm_js"] }

# --- Dépendances de développement ---
[dev-dependencies]
serial_test = "3.3.1"
tempfile = "3.10"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
audio = ["dep:cpal", "dep:rubato", "dep:audioadapter", "dep:ringbuf"]

# ==============================================================================
# RÈGLES DE COMPILATION CROISÉE (Cible EDGE : ARM64)
# ==============================================================================
[target.'cfg(target_arch = "aarch64")'.dependencies]
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }


