[package]
name = "raise-edge"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
raise-core = { path = "../raise-core", default-features = false }

# 2. Dépendances héritées du Workspace racine
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
wasmtime.workspace = true


 
